# Skin-Flaps-2

./: .gitignore  CMakeLists.txt  MACOS_PORT_PROJECT_PLAN.md  README.md  imgui.ini
Model/: mtFragmentShader.txt  mtVertexShader.txt
PDTetPhysics/: CMakeLists.txt
PDTetPhysics/PDDeformer/include/: GridDeformerTet.h  MKLWrapper.h  SchurSolver.h
PDTetPhysics/PDDeformer/src/: Add_Force.cpp  GridDeformerTet.cpp  PardisoWrapper.cpp  ReshapeDataStructure.cpp
PDTetPhysics/include/: pdTetPhysics.h
PDTetPhysics/src/: MergedLevelSet.cpp  PDTetSolver.cpp  SchurSolver.cpp
PhysBAM_subset/: CMakeLists.txt  physbam_stubs.cpp
PhysBAM_subset/Public_Library/PhysBAM_Tools/Grids_Uniform_Interpolation/: LINEAR_INTERPOLATION_MAC_2D_HELPER.cpp  LINEAR_INTERPOLATION_MAC_3D_HELPER.cpp  LINEAR_INTERPOLATION_UNIFORM.cpp
PhysBAM_subset/Public_Library/PhysBAM_Tools/Log/: LOG.h
SkinFlaps/: CMakeLists.txt
SkinFlaps/src/: FacialFlapsGui.cpp  FacialFlapsGui.h  bccTetScene.cpp  bccTetScene.h  deepCut.cpp  hooks.cpp  hooks.h  json.cpp  main.cpp  remapTetPhysics.cpp  remapTetPhysics.h  skinCutUndermineTets.cpp  skinCutUndermineTets.h  surgicalActions.cpp  surgicalActions.h  tetCollisions.cpp
docs/macos-port/: codebase-map.md  dependency-analysis.md
gl3wGraphics/: Bitmap.h  CMakeLists.txt  boundingBox.h  lightsShaders.cpp  lines.h  materialTriangles.cpp  staticTriangle.cpp  surgGraphics.cpp  textures.cpp  trackball.cpp
imgui_glfw_nfd_lib/: CMakeLists.txt
imgui_glfw_nfd_lib/extLibs/gl3w/: CMakeLists.txt
simd-numeric-kernels-new/: CMakeLists.txt
simd-numeric-kernels-new/Common/: KernelCommon.h
simd-numeric-kernels-new/Kernels/Singular_Value_Decomposition/: Singular_Value_Decomposition_Kernel_Declarations.hpp
